<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <FrameLayout
            android:id="@+id/id_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgBtn_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWrite"
                android:contentDescription="@string/frag_news"
                app:srcCompat="@drawable/ic_home_black_24dp" />

            <ImageButton
                android:id="@+id/imgBtn_evaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWrite"
                android:contentDescription="@string/frag_evaluation"
                app:srcCompat="@drawable/ic_mode_edit_black_24dp" />

            <ImageButton
                android:id="@+id/imgBtn_inqire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWrite"
                android:contentDescription="@string/frag_inquire"
                app:srcCompat="@drawable/ic_search_black_24dp" />

            <ImageButton
                android:id="@+id/imgBtn_teach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWrite"
                android:contentDescription="@string/frag_teach"
                app:srcCompat="@drawable/ic_import_contacts_black_24dp" />

            <ImageButton
                android:id="@+id/imgBtn_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorWrite"
                android:contentDescription="@string/frag_setup"
                app:srcCompat="@drawable/ic_settings_black_24dp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
