<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".tw.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LableTile"
                android:text="@string/app_name2"
                android:textSize="@dimen/dp_28"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:id="@+id/imageView"
                android:background="@mipmap/ic_launcher_logo"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_100"
                android:layout_marginRight="@dimen/dp_100"
                android:layout_below="@+id/LableTile"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_25"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:layout_marginTop="@dimen/dp_25"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/md_blue_A600"
                android:textColor="@color/md_grey_50"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/email_login_form2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_registered"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/btn_registered"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="#00000000"
                    android:layout_weight="0.50" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/action_forget_password"
                    android:id="@+id/btn_forget_password"
                    android:layout_marginTop="@dimen/dp_20"
                    android:background="#00000000"
                    android:layout_weight="0.50" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
