<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mini_cexentrustment.tw.SelectRoleActivity">


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/select_role_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/select_role_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_select_role_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/select_role_LableTile"
                android:text="@string/app_name3"
                android:textSize="@dimen/dp_24"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_70"
                android:weightSum="1">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="1">
                    <ImageView
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_100"
                        android:id="@+id/select_role_imageView"
                        android:background="@mipmap/ic_launcher_logo"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_30"
                        android:layout_marginRight="@dimen/dp_30"
                        android:clickable="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/select_role_imageView_title"
                        android:text="@string/teacher"
                        android:textSize="@dimen/dp_20"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/dp_60"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_marginTop="@dimen/dp_20"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ImageView
                        android:layout_width="@dimen/dp_100"
                        android:layout_height="@dimen/dp_100"
                        android:id="@+id/select_role_imageView2"
                        android:background="@mipmap/ic_launcher_logo"
                        android:layout_marginTop="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_30"
                        android:layout_marginRight="@dimen/dp_30"
                        android:clickable="true"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/select_role_imageView2_title"
                        android:text="@string/student"
                        android:textSize="@dimen/dp_20"
                        android:textStyle="bold"
                        android:clickable="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/dp_60"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_marginTop="@dimen/dp_20"/>

                </LinearLayout>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/select_role_LableTile2"
                android:text="@string/app_name4"
                android:textSize="@dimen/dp_20"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginRight="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_70"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
